# imotion

./: AUTHORS  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
build-aux/: ltmain.sh
data/: geekast.glade.old  imotion.glade
src/: Makefile  Makefile.am  Makefile.in  callback.cc  callback.h  cameramanager.cc  cameramanager.h  compile  imotion.cc  imotionapp.cc  imotionapp.h
src/.deps/: callback.Po  geekast-callback.Po  geekast-main.Po  geekast-ui.Tpo  main.Po  ui.Po
src/tests/: clock.cc  clock.h  compile.sh  compile_clock.sh  gst_test.c  gst_test2.c  main.cc  p.c
tests/: Makefile  Makefile.am  Makefile.in
